导航栏切换问题

--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/font/iconfont.css">
+  <link rel="stylesheet" href="/font2/iconfont.css">
+  <link rel="stylesheet" href="/font3/iconfont.css">
   <title>Document</title>
 </head>
 <body>
-  <nav id="global-nav" class="nav-container"></nav>
+  
+  <nav id="apple-nav" class="nav-container"></nav>
 
   <div id="blur-mask" class="page-mask"></div>
 
-  <main id="app">
-
-  </main>
-
+  <main id="hero"></main>
 
   <script type="module" src="/src/main.js"></script>
 </body>
